--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+# Locations path for the migration scripts
+spring.flyway.locations=classpath:db/migration
 
+# If true, it will automatically attempt to apply migrations when the application starts.
+spring.flyway.baseline-on-migrate=true
+
+# Naming prefix for the SQL migrations (default is 'V')
+# spring.flyway.sql-migration-prefix=V
