--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/ideaxhub
+#spring.datasource.username=yourDbUsername
+#spring.datasource.password=yourDbPassword
+
 # Locations path for the migration scripts
 spring.flyway.locations=classpath:db/migration
 
