Preparing for DB migration

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/ideaxhub
-#spring.datasource.username=yourDbUsername
+spring.datasource.username=nishanth
 #spring.datasource.password=yourDbPassword
 
 # Locations path for the migration scripts
