Fixed All Deployment & Migration Issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,15 @@ spring.flyway.baseline-on-migrate=true
 
 # Naming prefix for the SQL migrations (default is 'V')
 # spring.flyway.sql-migration-prefix=V
+
+# Log level
+logging.level.com.ideaXhub=DEBUG
+
+# Log pattern for console
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+# Name of the log file
+logging.file.name=ideaxhub.log
+
+# Alternatively, if you just want to specify a directory
+# logging.file.path=/path/to/logs
