--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,13 @@ spring.flyway.baseline-on-migrate=true
 # Naming prefix for the SQL migrations (default is 'V')
 # spring.flyway.sql-migration-prefix=V
 
+management.endpoints.web.exposure.include=mappings
+
+
 # Log level
 logging.level.com.ideaXhub=DEBUG
+logging.level.com.ideaXhub.controller=DEBUG
+
 
 # Log pattern for console
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
