--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Java CI with Maven
+name: Java CI with Maven and Docker Build
 
 on:
   push:
@@ -29,3 +29,17 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml -DskipTests
+
+    - name: Build Docker Image
+        run: |
+          docker build -t nishanthkwel/ideaxhub:latest .
+
+          - name: Log in to Docker Hub
+            uses: docker/login-action@v1
+            with:
+              username: ${{ secrets.DOCKER_USERNAME }}
+              password: ${{ secrets.DOCKER_PASSWORD }}
+
+          - name: Push Docker Image to Docker Hub
+            run: |
+              docker push nishanthkwel/ideaxhub:latest
