--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,31 +16,28 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml -DskipTests
+      - uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml -DskipTests
 
-    - name: Build Docker Image
-        run: |
-          docker build -t nishanthkwel/ideaxhub:latest .
+      # Ensure the indentation is correct for each step
+      - name: Build Docker Image
+        run: docker build -t nishanthkwel/ideaxhub:latest .
 
-          - name: Log in to Docker Hub
-            uses: docker/login-action@v1
-            with:
-              username: ${{ secrets.DOCKER_USERNAME }}
-              password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-          - name: Push Docker Image to Docker Hub
-            run: |
-              docker push nishanthkwel/ideaxhub:latest
-
+      - name: Push Docker Image to Docker Hub
+        run: docker push nishanthkwel/ideaxhub:latest
