--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.flyway.baseline-on-migrate=true
 
 management.endpoints.web.exposure.include=mappings
 
-spring.security.user.name=admin
-spring.security.user.password=ideaxhub-default
+#spring.security.user.name=
+#spring.security.user.password=
 # Log level
 logging.level.com.ideaXhub=DEBUG
 logging.level.com.ideaXhub.controller=DEBUG
